<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible" >

    <LinearLayout
        android:id="@+id/layout_student_info_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="@dimen/font_20"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/seperate_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/layout_student_info_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_student_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_number"
            android:textSize="@dimen/font_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_student_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/student_class"
            android:textSize="@dimen/font_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_student_register_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/student_register_time"
            android:textSize="@dimen/font_14"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>